@@ -4,6 +4,7 @@ Requires:
 New features:
 ~~~~~~~~~~~~~
 - http://www.zope.org/Collectors/CMF/309
+- reindexObjectSecurity() optimization : CMF > 1.5.1
 Bug fixes:
 ~~~~~~~~~~
 - #610: Fix for Zope 2.7 + Five compatibility.
